@@ -6,6 +6,10 @@ Changes to the Mercury standard library:
   float.m and extras/complex_numbers (because of rounding errors the
   functions aren't actually reversible).
 
+* We've removed the buggy destructive update modes of string__set_char,
+  string__set_char_det and string__unsafe_set_char (they cause crashes when
+  applied to constant strings).
+
 * We've fixed a bug in time.m. Type `tm' didn't store the day of the month,
   which meant that the functions which required that field (e.g. time__asctime,
   time__mktime) did not work.
